[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/id_card.png" type="Texture" id=1]
[ext_resource path="res://assets/art/characters/imp.png" type="Texture" id=2]
[ext_resource path="res://IDCard.gd" type="Script" id=3]
[ext_resource path="res://ChipCounter.tscn" type="PackedScene" id=4]

[node name="IDCard" type="Node2D"]
script = ExtResource( 3 )

[node name="CardBackSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="PortraitSprite" type="Sprite" parent="."]
position = Vector2( 5, 20 )
texture = ExtResource( 2 )
centered = false

[node name="ChipCounter" parent="." instance=ExtResource( 4 )]
position = Vector2( 47, 35 )

[node name="NameLabel" type="Label" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 44.0
margin_bottom = 18.0
text = "name"

[node name="HPLabel" type="Label" parent="."]
margin_left = 39.0
margin_top = 17.0
margin_right = 79.0
margin_bottom = 31.0
text = "10/10"

[node name="HPChangeLabel" type="Label" parent="."]
margin_left = 80.0
margin_top = 17.0
margin_right = 120.0
margin_bottom = 31.0
